--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
 <!doctype html>
-<html lang="zh-CN" class="dark">
+<html lang="en" class="dark">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- SEO Meta Tags -->
-  <meta name="description" content="NewsNow - 实时新闻聚合阅读器，汇集全球热点新闻，提供优雅的阅读体验" />
-  <meta name="keywords" content="新闻,科技新闻,实时新闻,新闻聚合,NewsNow" />
-  <meta name="author" content="NewsNow" />
+  <meta name="description" content="Canada NewsNow - Real-time Canadian news aggregator covering CBC, CTV, Global News, Globe and Mail, Toronto Star, National Post, and CP24" />
+  <meta name="keywords" content="Canada news,Canadian news,CBC,CTV,Global News,Toronto Star,Globe and Mail,National Post,CP24,news aggregator" />
+  <meta name="author" content="Canada NewsNow" />
   <meta name="robots" content="index, follow" />
 
   <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="NewsNow - 优雅的新闻聚合阅读器" />
-  <meta property="og:description" content="实时新闻聚合阅读器，汇集全球热点新闻，提供优雅的阅读体验" />
+  <meta property="og:title" content="Canada NewsNow - Canadian News Aggregator" />
+  <meta property="og:description" content="Real-time Canadian news aggregator covering all major Canadian news outlets" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://newsnow.busiyi.world" />
-  <meta property="og:image" content="https://newsnow.busiyi.world/og-image.png" />
+  <meta property="og:image" content="/og-image.png" />
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="NewsNow - 优雅的新闻聚合阅读器" />
-  <meta name="twitter:description" content="实时新闻聚合阅读器，汇集全球热点新闻，提供优雅的阅读体验" />
-  <meta name="twitter:image" content="https://newsnow.busiyi.world/og-image.svg" />
+  <meta name="twitter:title" content="Canada NewsNow - Canadian News Aggregator" />
+  <meta name="twitter:description" content="Real-time Canadian news aggregator covering all major Canadian news outlets" />
+  <meta name="twitter:image" content="/og-image.svg" />
 
-  <meta name="theme-color" content="#F14D42" />
+  <meta name="theme-color" content="#D52B1E" />
   <link rel="preload" href="/Baloo2-Bold.subset.ttf" as="font" type="font/ttf" crossorigin>
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
 
@@ -33,19 +32,9 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "name": "NewsNow",
-      "url": "https://newsnow.busiyi.world",
-      "description": "实时新闻聚合阅读器，汇集全球热点新闻，提供优雅的阅读体验",
+      "name": "Canada NewsNow",
+      "description": "Real-time Canadian news aggregator covering CBC, CTV, Global News, Globe and Mail, Toronto Star, National Post, and CP24"
     }
-  </script>
-
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EL9HHYE5LC"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-EL9HHYE5LC');
   </script>
 
   <script>
@@ -56,7 +45,7 @@
       window.history.replaceState({}, document.title, window.location.pathname)
     }
   </script>
-  <title>NewsNow</title>
+  <title>Canada NewsNow</title>
 </head>
 
 <body>
